--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/barunchuk.png"/>
     <title>BarunChuk</title>
   </head>
   <body>
